Name:                bytestring
Version:             0.9
Description:         Fast, packed, strict and lazy byte arrays with a list interface
License:             BSD3
License-file:        LICENSE
Author:              Don Stewart, Duncan Coutts
Maintainer:          dons@cse.unsw.edu.au, duncan@haskell.org
Build-Depends:       base
extensions:          CPP, ForeignFunctionInterface
Exposed-modules:     Data.ByteString
                     Data.ByteString.Char8
                     Data.ByteString.Base
                     Data.ByteString.Fusion
                     Data.ByteString.Lazy
                     Data.ByteString.Lazy.Char8
ghc-options:         -Wall -fglasgow-exts -O2
nhc98-options:       -K4M
include-dirs:        cbits
c-sources:           cbits/fpstring.c

-- For ghc 6.4.2 or older:
-- -DSLOW_FOREIGN_PTR
