Name:                bench-bytestring
Version:             0.1.0.0
Synopsis:            Benchmarks for bytestring
Description:
    This package is not meant for public release. It fixes a problem with the
    current benchmarking support in cabal, which has trouble compiling because
    gauge depends on bytestring. Here, we just include the whole source of
    the bytestring library directly.

License:             BSD3
License-file:        LICENSE
Category:            Data
Copyright:           (c) Simon Meier          2010-2011.

Author:              Simon Meier
Maintainer:          Simon Meier <iridcode@gmail.com>
                     Duncan Coutts <duncan@community.haskell.org>
Bug-reports:         iridcode@gmail.com
                     duncan@community.haskell.org
Tested-With:         GHC==8.10.1, GHC==8.8.3, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2,
                     GHC==8.0.2, GHC==7.10.3
Build-Type:          Simple
Cabal-Version:       >= 1.10

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/bytestring/

flag integer-simple
  description: Use the simple integer library instead of GMP
  default: False

benchmark bench-bytestring-builder
  hs-source-dirs:    . ..
  main-is:           BenchAll.hs
  type:              exitcode-stdio-1.0

  build-depends:     base >= 4.8 && < 5
                   , ghc-prim
                   , deepseq       >= 1.2
                   , gauge         >= 0.2.5
                   , random
  other-modules:
        Data.ByteString
        Data.ByteString.Builder
        Data.ByteString.Builder.ASCII
        Data.ByteString.Builder.Extra
        Data.ByteString.Builder.Internal
        Data.ByteString.Builder.Prim
        Data.ByteString.Builder.Prim.ASCII
        Data.ByteString.Builder.Prim.Binary
        Data.ByteString.Builder.Prim.Internal
        Data.ByteString.Builder.Prim.Internal.Base16
        Data.ByteString.Builder.Prim.Internal.Floating
        Data.ByteString.Builder.Prim.Internal.UncheckedShifts
        Data.ByteString.Internal
        Data.ByteString.Lazy
        Data.ByteString.Lazy.Internal
        Data.ByteString.Short.Internal
        Data.ByteString.Unsafe

  -- cabal complains about ../ dirs. However, this is better than symlinks,
  -- which probably don't work on windows.
  c-sources:         ../cbits/fpstring.c
                     ../cbits/itoa.c
  include-dirs:      ../include
  includes:          fpstring.h
  install-includes:  fpstring.h

  default-language: Haskell98
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6

  -- flags for the decimal integer serialization code
  if impl(ghc >= 8.11)
    build-depends: ghc-bignum >= 1.0

  if impl(ghc < 8.11)
    if !flag(integer-simple)
      cpp-options: -DINTEGER_GMP
      build-depends: integer-gmp >= 0.2

benchmark bench-builder-boundscheck
  hs-source-dirs:   .. .
  main-is:          BoundsCheckFusion.hs
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.8 && < 5,
                    deepseq,
                    ghc-prim,
                    gauge
  c-sources:        ../cbits/fpstring.c
                    ../cbits/itoa.c
  include-dirs:     ../include
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
  default-language: Haskell98
  other-modules:
        Data.ByteString
        Data.ByteString.Builder
        Data.ByteString.Builder.ASCII
        Data.ByteString.Builder.Extra
        Data.ByteString.Builder.Internal
        Data.ByteString.Builder.Prim
        Data.ByteString.Builder.Prim.ASCII
        Data.ByteString.Builder.Prim.Binary
        Data.ByteString.Builder.Prim.Internal
        Data.ByteString.Builder.Prim.Internal.Base16
        Data.ByteString.Builder.Prim.Internal.Floating
        Data.ByteString.Builder.Prim.Internal.UncheckedShifts
        Data.ByteString.Internal
        Data.ByteString.Lazy
        Data.ByteString.Lazy.Internal
        Data.ByteString.Short.Internal
        Data.ByteString.Unsafe

benchmark bench-builder-csv
  hs-source-dirs:   .. .
  main-is:          CSV.hs
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.8 && < 5,
                    deepseq,
                    ghc-prim,
                    text,
                    gauge,
                    utf8-string,
                    utf8-light,
                    bytestring,
                    dlist
  c-sources:        ../cbits/fpstring.c
                    ../cbits/itoa.c
  include-dirs:     ../include
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
  default-language: Haskell2010

benchmark bench-strict-indices
  hs-source-dirs:   .. .
  main-is:          BenchIndices.hs
  other-modules:    Data.ByteString
                    Data.ByteString.Internal
                    Data.ByteString.Unsafe
  type:             exitcode-stdio-1.0
  c-sources:        ../cbits/fpstring.c
                    ../cbits/itoa.c
  include-dirs:     ../include
  build-depends:    base >= 4.8 && < 5
                  , ghc-prim
                  , deepseq       >= 1.2
                  , gauge         >= 0.2.5
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
  default-language: Haskell2010
