-- This "package" exists because Cabal throws a circular dependency
-- fit if asked to build the top-level package with tests enabled.

name:          bytestring-tests
version:       0.0.0.0
synopsis:      Tests for the bytestring package
description:   Tests for the bytestring package
homepage:      https://github.com/haskell/bytestring
license:       BSD3
license-file:  ../LICENSE
author:        Bryan O'Sullivan <bos@serpentine.com>
maintainer:    Bryan O'Sullivan <bos@serpentine.com>
category:      Data
build-type:    Simple
cabal-version: >=1.8

flag integer-simple
  description: Use the simple integer library instead of GMP
  default: False

-- QC properties, with GHC RULES disabled
test-suite prop-compiled
  type:             exitcode-stdio-1.0
  main-is:          Properties.hs
  other-modules:    Rules
                    QuickCheckUtils

  hs-source-dirs:   .
  build-depends:    base, bytestring, ghc-prim, deepseq, random, directory,
                    test-framework, test-framework-quickcheck2,
                    QuickCheck >= 2.10 && < 2.15
  cpp-options:      -DHAVE_TEST_FRAMEWORK=1
  ghc-options:      -fwarn-unused-binds
                    -fno-enable-rewrite-rules
                    -threaded -rtsopts
  extensions:       BangPatterns
                    UnliftedFFITypes,
                    MagicHash,
                    ScopedTypeVariables
                    NamedFieldPuns

executable regressions
  main-is:          Regressions.hs
  hs-source-dirs:   .
  build-depends:    base, bytestring, ghc-prim, deepseq, random, directory,
                    test-framework, test-framework-hunit, HUnit
  cpp-options:      -DHAVE_TEST_FRAMEWORK=1
  ghc-options:      -fwarn-unused-binds
                    -fno-enable-rewrite-rules
                    -threaded -rtsopts
  extensions:       BangPatterns
                    UnliftedFFITypes,
                    MagicHash,
                    ScopedTypeVariables
                    NamedFieldPuns

test-suite test-builder
  type:             exitcode-stdio-1.0
  hs-source-dirs:   . builder
  main-is:          TestSuite.hs
  other-modules:    Data.ByteString.Builder.Tests
                    Data.ByteString.Builder.Prim.Tests
                    Data.ByteString.Builder.Prim.TestUtils
  build-depends:    base, bytestring, ghc-prim,
                    deepseq,
                    QuickCheck                 >= 2.10 && < 2.15,
                    byteorder                  == 1.0.*,
                    dlist                      >= 0.5 && < 0.9,
                    directory,
                    mtl                        >= 2.0 && < 2.3,
                    HUnit,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2  >= 0.3

  cpp-options:      -DHAVE_TEST_FRAMEWORK=1
  ghc-options:      -Wall -fwarn-tabs -fhpc -threaded -rtsopts

  extensions:       CPP, ForeignFunctionInterface
                    UnliftedFFITypes,
                    MagicHash,
                    ScopedTypeVariables
                    Rank2Types
                    BangPatterns
                    NamedFieldPuns
